--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </ul>
             </div>
         </nav>
-        <ul id="content">
+        <ul id="contentBox">
             <li><div id="firstBox" class="box">
                 <div class="container"><h1>Freshest</h1>
                 <p>Clean, Healthy, Always Fresh Foods</p>
@@ -27,13 +27,30 @@
             </li></div>            
             <li><div id="secondBox" class="box">
                 <div class="image1"></div>
-
+                <div class="content" id="content1">
+                    <div class="words">
+                        <h3>Generalia exper</h3>
+                        <p>Abducendam cap theologiae suo qua ostenditur hic praesertim. Habent ea hocque si colore ha. Abducendam cap theologiae suo qua ostenditur hic praesertim. Habent ea hocque si colore ha.</p>
+                    </div>
+                </div>
             </li></div>
             <li><div id="thirdBox" class="box">
-
+                <div class="image2"></div>
+                <div class="content" id="content2">
+                    <div class="words">
+                        <h3>Generalia exper</h3>
+                        <p>Abducendam cap theologiae suo qua ostenditur hic praesertim. Habent ea hocque si colore ha. Abducendam cap theologiae suo qua ostenditur hic praesertim. Habent ea hocque si colore ha.</p>
+                    </div>
+                </div>
             </li></div>
             <li><div id="fourthBox" class="box">
-
+                <div class="image3"></div>
+                <div class="content" id="content3">
+                    <div class="words">
+                        <h3>Generalia exper</h3>
+                        <p>Abducendam cap theologiae suo qua ostenditur hic praesertim. Habent ea hocque si colore ha. Abducendam cap theologiae suo qua ostenditur hic praesertim. Habent ea hocque si colore ha.</p>
+                    </div>
+                </div>
             </li></div>
         </ul>
     </body>
